<resources>
    <string name="app_name">MyOtakuList</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="welcome_message">Welcome</string>
    <string name="menu_top_anime">Top Anime</string>
    <string name="menu_now_playing_anime">Now Playing Anime</string>
    <string name="menu_top_manga">Top Manga</string>
    <string name="menu_favorite">Favorite</string>
    <string name="detail_anime">Detail Anime</string>
    <string name="detail_manga">Detail Manga</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="loading">Loading..</string>
    <string name="error">Error!</string>
    <string name="retry">Retry</string>
    <string name="not_found">Not Found!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="label_cover">Cover</string>
    <string name="label_score">Score</string>
    <string name="label_rank">Ranked</string>
    <string name="label_popularity">Popularity</string>
    <string name="value_with_hashtag">#%s</string>
    <string name="value_placeholder">value</string>
    <string name="label_synopsis">Synopsis</string>
    <string name="label_information">Information</string>
    <string name="label_japanese_title">Japanese Title</string>
    <string name="value_with_colon">: %s</string>
    <string name="label_type">Type</string>
    <string name="label_episodes">Episodes</string>
    <string name="label_status">Status</string>
    <string name="label_aired">Aired</string>
    <string name="label_premiered">Premiered</string>
    <string name="label_broadcast">Broadcast</string>
    <string name="label_source">Source</string>
    <string name="label_genres">Genres</string>
    <string name="label_theme">Theme</string>
    <string name="label_duration">Duration</string>
    <string name="label_rating">Rating</string>
    <string name="label_unknown">Unknown</string>
    <string name="label_volumes">Volumes</string>
    <string name="label_chapters">Chapters</string>
    <string name="label_published">Published</string>
    <string name="label_authors">Authors</string>
    <string name="title_favorite">Favorite</string>
    <string name="add_anime_favorite">This anime has been added to your favorite!</string>
    <string name="delete_anime_favorite">This anime has been deleted from your favorite!</string>
    <string name="add_manga_favorite">This manga has been added to your favorite!</string>
    <string name="delete_manga_favorite">This manga has been deleted from your favorite!</string>
    <string name="empty_favorite_anime">You have no favorite anime.</string>
    <string name="empty_favorite_manga">You have no favorite manga.</string>
</resources>