<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_top_anime"
            android:icon="@drawable/ic_top_anime"
            android:title="@string/menu_top_anime" />
        <item
            android:id="@+id/nav_now_playing_anime"
            android:icon="@drawable/ic_seasons_anime"
            android:title="@string/menu_now_playing_anime" />
        <item
            android:id="@+id/nav_top_manga"
            android:icon="@drawable/ic_top_manga"
            android:title="@string/menu_top_manga" />
    </group>
</menu>